--- a/assets/scss/bundle.css
+++ b/assets/scss/bundle.css
@@ -1,1 +1,14 @@
-/* No CSS *//*# sourceMappingURL=bundle.css.map */
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Red Hat Text', sans-serif;
+  font-size: 14px;
+  height: 100vh;
+  background: url(../img/bg-stars.svg), #1b1924;
+}
+/*# sourceMappingURL=bundle.css.map */
