--- a/assets/scss/reset.scss
+++ b/assets/scss/reset.scss
@@ -4,4 +4,5 @@ body{
   font-family: 'Red Hat Text', sans-serif;
   font-size: 14px;
   height: 100vh;
+  background: url(../img/bg-stars.svg), hsl(249, 18%, 12%);
 }
