--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1,17 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-body {
-  font-family: 'Red Hat Text', sans-serif;
-  font-size: 14px;
-  height: 100vh;
-  background: url(../img/bg-stars.svg), #1b1924;
-}
-
 main {
   height: 100vh;
   background: url(../img/pattern-hills.svg);
@@ -32,4 +18,4 @@ main {
           justify-content: flex-start;
   padding-top: 20vh;
 }
-/*# sourceMappingURL=bundle.css.map */
+/*# sourceMappingURL=main.css.map */
