--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -1,8 +1,7 @@
 main {
   height: 100vh;
-  background: url(../img/pattern-hills.svg);
+  background: url(../img/pattern-hills.svg) no-repeat 0 bottom;
   background-size: contain;
-  background-repeat: no-repeat;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -17,5 +16,11 @@ main {
       -ms-flex-pack: start;
           justify-content: flex-start;
   padding-top: 20vh;
+}
+
+main h1 {
+  margin-bottom: 100px;
+  color: #fff;
+  text-transform: uppercase;
 }
 /*# sourceMappingURL=main.css.map */
