--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -23,4 +23,14 @@ main h1 {
   color: #fff;
   text-transform: uppercase;
 }
+
+main .countdown {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-flow: row nowrap;
+          flex-flow: row nowrap;
+}
 /*# sourceMappingURL=main.css.map */
