--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -66,12 +66,24 @@ main {
     transform: perspective(200px);
   }
 
+  .time-elem .top::after,
+  .time-elem .bottom-back::after {
+    content: '';
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    border-bottom: 1px solid #000;
+  }
+
   .bottom {
     z-index: 1;
   }
 
   .bottom::before {
-    content: '';
+    content: "";
   }
 
   .bottom-back {
@@ -87,6 +99,28 @@ main {
     left: 0;
     right: 0;
     bottom: 0;
+    margin: auto;
+  }
+
+  .top,
+  .top-back {
+    height: 50%;
+    overflow: hidden;
+    backface-visibility: hidden;
+  }
+
+  .top-back {
+    z-index: 4;
+    bottom: 0;
+    transform-origin: 50% 0;
+    transform: perspective(200px) rotateX(180deg);
+  }
+
+  .top-back span {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    right: 0;
     margin: auto;
   }
 }
