--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -100,6 +100,13 @@ main .bottom {
 
 main .bottom::before {
   content: "";
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100px;
+  height: 50%;
+  background-color: #33354d;
 }
 
 main .bottom-back {
