--- a/assets/scss/bundle.css
+++ b/assets/scss/bundle.css
@@ -29,7 +29,8 @@ main {
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  padding-top: 20vh;
+  padding-top: 15vh;
+  position: relative;
 }
 
 main h1 {
@@ -63,11 +64,11 @@ main .time-elem {
 
 main .time-elem::before,
 main .time-elem::after {
-  content: "";
+  content: '';
   position: absolute;
   z-index: 6;
   top: calc(50% - 5px);
-  background: #000;
+  background: #24242e;
   border-radius: 50%;
   width: 10px;
   height: 10px;
@@ -84,7 +85,7 @@ main .time-elem::after {
 main .time-elem > span {
   position: absolute;
   left: 0;
-  height: 0;
+  right: 0;
 }
 
 main .top {
