--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -26,7 +26,7 @@ main {
     color: hsl(345, 95%, 68%);
     height: 80px;
     width: 100px;
-    background-color: hsl(235, 28%, 25%);
+    background-color: hsl(235, 20%, 25%);
     border-radius: 10px;
     text-align: center;
     font-size: 5em;
@@ -39,7 +39,7 @@ main {
     position: absolute;
     z-index: 6;
     top: calc(50% - 5px);
-    background: hsl(240, 12%, 16%);
+    background: #000;
     border-radius: 50%;
     width: 10px;
     height: 10px;
@@ -99,6 +99,7 @@ main {
     top: 0;
     height: 50%;
     overflow: hidden;
+    background-color: hsl(235, 20%, 25%); 
   }
 
   .bottom-back span {
@@ -121,6 +122,7 @@ main {
     z-index: 4;
     bottom: 0;
     transform-origin: 50% 0;
+    background-color: hsl(235, 20%, 25%);
     transform: perspective(200px) rotateX(180deg);
   }
 
