--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -21,16 +21,31 @@ main {
   }
 
   .time-elem {
+    // position: relative;
+    // color: hsl(345, 95%, 68%);
+    // margin-right: 20px;
+    // height: 80px;
+    // width: 100px;
+    // background-color: hsl(235, 20%, 25%);
+    // border-radius: 10px;
+    // text-align: center;
+    // font-size: 5em;
+    // overflow: hidden;    
+    // box-shadow: 0px 8px 0px 0px #16151d;
+
     position: relative;
-    margin-right: 20px;
     color: hsl(345, 95%, 68%);
-    height: 80px;
-    width: 100px;
+    position: relative;
+    height: 140px;
+    width: 150px;
     background-color: hsl(235, 20%, 25%);
-    border-radius: 10px;
+    border-radius: 8px;
     text-align: center;
-    font-size: 5em;
+    font-size: 5.5em;
     overflow: hidden;
+    margin-bottom: 27px;
+    line-height: 138px;
+    box-shadow: 0px 8px 0px 0px #16151d;
   }
 
   .time-elem::before,
