--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -38,16 +38,14 @@ main .countdown {
 main .time-elem {
   position: relative;
   color: #fb6087;
-  position: relative;
-  height: 140px;
-  width: 150px;
+  margin-right: 20px;
+  height: 80px;
+  width: 100px;
   background-color: #33354d;
-  border-radius: 8px;
+  border-radius: 10px;
   text-align: center;
-  font-size: 5.5em;
+  font-size: 4.3em;
   overflow: hidden;
-  margin-bottom: 27px;
-  line-height: 138px;
   -webkit-box-shadow: 0px 8px 0px 0px #16151d;
           box-shadow: 0px 8px 0px 0px #16151d;
 }
@@ -96,7 +94,7 @@ main .time-elem .bottom-back::after {
   bottom: 0;
   width: 100%;
   height: 100%;
-  border-bottom: 1px solid #000;
+  border-bottom: 1px solid #24242e;
 }
 
 main .bottom {
