--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -21,30 +21,16 @@ main {
   }
 
   .time-elem {
-    // position: relative;
-    // color: hsl(345, 95%, 68%);
-    // margin-right: 20px;
-    // height: 80px;
-    // width: 100px;
-    // background-color: hsl(235, 20%, 25%);
-    // border-radius: 10px;
-    // text-align: center;
-    // font-size: 5em;
-    // overflow: hidden;    
-    // box-shadow: 0px 8px 0px 0px #16151d;
-
     position: relative;
     color: hsl(345, 95%, 68%);
-    position: relative;
-    height: 140px;
-    width: 150px;
+    margin-right: 20px;
+    height: 80px;
+    width: 100px;
     background-color: hsl(235, 20%, 25%);
-    border-radius: 8px;
+    border-radius: 10px;
     text-align: center;
-    font-size: 5.5em;
-    overflow: hidden;
-    margin-bottom: 27px;
-    line-height: 138px;
+    font-size: 4.3em;
+    overflow: hidden;    
     box-shadow: 0px 8px 0px 0px #16151d;
   }
 
@@ -91,7 +77,7 @@ main {
     bottom: 0;
     width: 100%;
     height: 100%;
-    border-bottom: 1px solid #000;
+    border-bottom: 1px solid hsl(240, 12%, 16%);
   }
 
   .bottom {
