--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -154,4 +154,12 @@ main .top-back span {
   right: 0;
   margin: auto;
 }
+
+@media screen and (max-width: 700px) {
+  .countdown {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 /*# sourceMappingURL=main.css.map */
