--- a/assets/scss/bundle.css
+++ b/assets/scss/bundle.css
@@ -168,4 +168,33 @@ main .top-back span {
   right: 0;
   margin: auto;
 }
+
+@media screen and (max-width: 700px) {
+  main h1 {
+    text-align: center;
+  }
+  main .countdown {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+  }
+  main .time-elem {
+    position: relative;
+    color: #fb6087;
+    margin-right: 20px;
+    height: 80px;
+    width: 100px;
+    background-color: #33354d;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 4.3em;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 8px 0px 0px #16151d;
+            box-shadow: 0px 8px 0px 0px #16151d;
+  }
+}
 /*# sourceMappingURL=bundle.css.map */
