--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -156,10 +156,31 @@ main .top-back span {
 }
 
 @media screen and (max-width: 700px) {
-  .countdown {
+  main h1 {
+    text-align: center;
+  }
+  main .countdown {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-flow: column nowrap;
+            flex-flow: column nowrap;
+  }
+  main .time-elem {
+    position: relative;
+    color: #fb6087;
+    margin-right: 20px;
+    height: 80px;
+    width: 100px;
+    background-color: #33354d;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 4.3em;
+    overflow: hidden;
+    -webkit-box-shadow: 0px 8px 0px 0px #16151d;
+            box-shadow: 0px 8px 0px 0px #16151d;
   }
 }
 /*# sourceMappingURL=main.css.map */
