--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -137,7 +137,29 @@ main {
 }
 
 @media screen and (max-width: 700px){
-  .countdown {
-    display: flex;
+  main {
+  
+    h1 {
+      text-align: center;
+    }
+  
+    .countdown {
+      display: flex;
+      flex-flow: column nowrap;
+    }
+
+    .time-elem {
+      position: relative;
+      color: hsl(345, 95%, 68%);
+      margin-right: 20px;
+      height: 80px;
+      width: 100px;
+      background-color: hsl(235, 20%, 25%);
+      border-radius: 10px;
+      text-align: center;
+      font-size: 4.3em;
+      overflow: hidden;    
+      box-shadow: 0px 8px 0px 0px #16151d;
+    }
   }
 }
