--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -138,9 +138,11 @@ main {
 
 @media screen and (max-width: 700px){
   main {
+    padding-top: 2vh;
   
     h1 {
       text-align: center;
+      margin-bottom: 40px;
     }
   
     .countdown {
@@ -151,13 +153,14 @@ main {
     .time-elem {
       position: relative;
       color: hsl(345, 95%, 68%);
-      margin-right: 20px;
-      height: 80px;
-      width: 100px;
+      margin-right: 0px;
+      margin-bottom: 20px;
+      height: 100px;
+      width: 120px;
       background-color: hsl(235, 20%, 25%);
       border-radius: 10px;
       text-align: center;
-      font-size: 4.3em;
+      font-size: 5.3em;
       overflow: hidden;    
       box-shadow: 0px 8px 0px 0px #16151d;
     }
