--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -155,6 +155,20 @@ main .top-back span {
   margin: auto;
 }
 
+main .social-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 40vh;
+  width: 10%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 @media screen and (max-width: 700px) {
   main {
     padding-top: 2vh;
