--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -134,6 +134,14 @@ main {
     right: 0;
     margin: auto;
   }
+
+  .social-media {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 40vh;
+    width: 10%;
+    align-items: center;
+  }
 }
 
 @media screen and (max-width: 700px){
