--- a/assets/scss/bundle.css
+++ b/assets/scss/bundle.css
@@ -201,19 +201,15 @@ main .social-media {
             flex-flow: column nowrap;
   }
   main .time-elem {
-    position: relative;
-    color: #fb6087;
     margin-right: 0px;
     margin-bottom: 20px;
     height: 100px;
     width: 120px;
-    background-color: #33354d;
-    border-radius: 10px;
-    text-align: center;
     font-size: 5.3em;
-    overflow: hidden;
-    -webkit-box-shadow: 0px 8px 0px 0px #16151d;
-            box-shadow: 0px 8px 0px 0px #16151d;
+  }
+  main .social-media {
+    margin-top: 4vh;
+    width: 30%;
   }
 }
 /*# sourceMappingURL=bundle.css.map */
