--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -187,8 +187,6 @@ main .social-media {
             flex-flow: column nowrap;
   }
   main .time-elem {
-    position: relative;
-    color: #fb6087;
     margin-right: 0px;
     margin-bottom: 20px;
     height: 100px;
@@ -197,9 +195,10 @@ main .social-media {
     border-radius: 10px;
     text-align: center;
     font-size: 5.3em;
-    overflow: hidden;
-    -webkit-box-shadow: 0px 8px 0px 0px #16151d;
-            box-shadow: 0px 8px 0px 0px #16151d;
+  }
+  main .social-media {
+    margin-top: 4vh;
+    width: 30%;
   }
 }
 /*# sourceMappingURL=main.css.map */
