--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -159,18 +159,16 @@ main {
     }
 
     .time-elem {
-      position: relative;
-      color: hsl(345, 95%, 68%);
       margin-right: 0px;
       margin-bottom: 20px;
       height: 100px;
       width: 120px;
-      background-color: hsl(235, 20%, 25%);
-      border-radius: 10px;
-      text-align: center;
       font-size: 5.3em;
-      overflow: hidden;    
-      box-shadow: 0px 8px 0px 0px #16151d;
+    }
+
+    .social-media {
+      margin-top: 4vh;
+      width: 30%;
     }
   }
 }
